--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   cloud_firestore:
   firebase_core :
-
+  firebase_auth :
+  provider :
   flutter:
     sdk: flutter
 
