--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   firebase_core :
   firebase_auth :
   provider :
+  curved_navigation_bar: ^0.3.3
+  simple_animations: ^1.3.3
   flutter:
     sdk: flutter
 
@@ -53,6 +55,12 @@ flutter:
       - img/suka.png
       - img/1.jpg
       - img/akun.png
+      - img/background.png
+      - img/background-1.png
+      - img/background-2.png
+      - img/clock.png
+      - img/light-1.png
+      - img/light-2.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
