--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
       - img/clock.png
       - img/light-1.png
       - img/light-2.png
+      - img/background-3.jpg
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
