update ui dan fungsi status aspirasi

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
       - img/clock.png
       - img/light-1.png
       - img/light-2.png
-      - img/background-3.jpg
+      - img/orang.jpg
 
   #   - images/a_dot_ham.jpeg
 
