--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,7 @@ flutter:
       - img/akun.png
       - img/background.png
       - img/background-1.png
-      - img/background-2.png
+      - img/6558.jpg
       - img/clock.png
       - img/light-1.png
       - img/light-2.png
